--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="customer.html" class="nav__link">Customer</a>
+                            <a href="customer.html" class="nav__link">Customers</a>
                         </li>
                         <li class="nav__item">
-                            <a href="product.html" class="nav__link">Product</a>
+                            <a href="product.html" class="nav__link">Products</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Company</a>
@@ -119,6 +119,21 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="testimony__container grid swiper-slide">
+                            <div class="testimony__card" data-sr-id="11" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1s cubic-bezier(0.5, 0, 0, 1) 0.2s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0.2s;">
+                                <img avatar="B R" class="testimony__photo" alt="BR">
+                                <div class="testimony__card-description">
+                                    <p>
+                                        Rabando helps us in launching our product in Indonesia
+                                    </p>
+                                    <div class="testimony__card-name">
+                                        <div class="testimony__card-name-detail">
+                                            BR<br>TC, Co Founder Bourn
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
@@ -131,27 +146,28 @@
                     <div class="grid-block__item  grid-default-block size-big type-row col-3">
                         <div class="grid-block__item--second-column grid-col col-3-2">
                             <p style="color: var(--container-color)">
-                                Our brands are sold across more than 150 retailers and marketplaces
+                                We have more than 50 channels to sell your products
                             </p>
                         </div>
                         <div class="grid-block__item--first-column grid-col col-3-1">
-                            <span style="color: var(--container-color);margin: 0 -62px 0 -28px;transform: rotate( 270deg );">150</span>
+                            <span style="color: var(--container-color);margin: 0 -62px 0 -28px;transform: rotate( 270deg );">50</span>
                         </div>
                     </div>
                     <div class="grid-block__item  grid-default-block size-big type-row col-4">
                         <div class="grid-block__item--second-column grid-col col-4-2">
-                            <p style="color: var(--title-color);">On average, our top brands have more than doubled their revenue every year since joining Thrasio</p>
+                            <p style="color: var(--title-color);">Our top brands enjoy at least 100% sales growth annually through our own marketing channels
+                            </p>
                         </div>
                         <div class="grid-block__item--first-column grid-col col-4-1">
-                            <span style="color: var(--container-color);">2X</span>
+                            <span style="color: var(--container-color);margin: 0 -62px 0 -28px;transform: rotate( 270deg );">100%</span>
                         </div>
                     </div>
                     <div class="grid-block__item  grid-big-block size-small type-column col-5">
                         <div class="grid-block__item--second-column grid-col col-5-2">
-                            <p style="color: var(--title-color)">86% of our brands sell internationally</p>
+                            <p style="color: var(--title-color)">We have 90% success rate in launching new product through our proven distribution channels</p>
                         </div>
                         <div class="grid-block__item--first-column grid-col col-5-1">
-                            <span style="color: var(--first-color);">86%</span>
+                            <span style="color: var(--first-color);">90%</span>
                         </div>
                     </div>
                 </div>
