--- a/product.html
+++ b/product.html
@@ -30,10 +30,10 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="customer.html" class="nav__link">Customer</a>
+                            <a href="customer.html" class="nav__link">Customers</a>
                         </li>
                         <li class="nav__item">
-                            <a href="product.html" class="nav__link active-link">Product</a>
+                            <a href="product.html" class="nav__link active-link">Products</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Company</a>
@@ -59,9 +59,27 @@
         <main class="main pages">
             <!--==================== PRODUCT ====================-->
             <section class="product__page container">
-                <div class="product__page-brands flex">
+                <div class="product__page-brands">
                     <div class="product__page-brands-block">
-                        <img src="assets/img/healing-solutions.png" alt="healing solutions" width="900" height="900">
+                        <img src="assets/img/honest-global.png" alt="honest global" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/kms-wholesale.png" alt="kms wholesale" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/nestle.png" alt="nestle" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/parker.png" alt="parker" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/pokka.png" alt="pokka" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/sidomuncul.png" alt="sidomuncul" width="900" height="900">
+                    </div>
+                    <div class="product__page-brands-block">
+                        <img src="assets/img/stabilo.png" alt="stabilo" width="900" height="900">
                     </div>
                     <div class="product__page-brands-block">
                         <img src="assets/img/betone.png" alt="betone" width="900" height="900">
