--- a/customer.html
+++ b/customer.html
@@ -30,10 +30,10 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="customer.html" class="nav__link active-link">Customer</a>
+                            <a href="customer.html" class="nav__link active-link">Customers</a>
                         </li>
                         <li class="nav__item">
-                            <a href="product.html" class="nav__link">Product</a>
+                            <a href="product.html" class="nav__link">Products</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Company</a>
